# clawd-dock

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.bat
pc_manager/: __init__.py  dashboard.py  dock.py  monitor.py  ram_clear.py  server.py  terminal.py  tray.py  voice.py
pc_manager/web/: app.jsx  clawd.jsx  index.html  side-dock.css  tabs.jsx
